force-app/main/default/objects/ArrProdDatosWS__c/ArrProdDatosWS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Datos para las llamadas a los WS de Producción de Arriaga</description>
    <label>ArriagaProduccion_DatosLlamadas</label>
</CustomObject>