force-app/main/default/objects/ArrProdDatosWS__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla que marca si el entorno esta activo para realizar peticiones</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>