force-app/main/default/objects/ArrProdDatosWS__c/fields/EndpointInsrtContc__c.field-meta.xml
<CustomField>
    <fullName>EndpointInsrtContc__c</fullName>
    <label>EndpointCrear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>