force-app/main/default/objects/ArrProdDatosWS__c/fields/EndpointInsrtExp__c.field-meta.xml
<CustomField>
    <fullName>EndpointInsrtExp__c</fullName>
    <description>Endpoint del entorno de producción para crear expedientes</description>
    <label>EndpointCrearExp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>