force-app/main/default/objects/ArrProdDatosWS__c/fields/EndpointUpdtContc__c.field-meta.xml
<CustomField>
    <fullName>EndpointUpdtContc__c</fullName>
    <label>EndpointActulizar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>