force-app/main/default/objects/ArrProdDatosWS__c/fields/EndpointUpdtExp__c.field-meta.xml
<CustomField>
    <fullName>EndpointUpdtExp__c</fullName>
    <description>Endpoint del entorno de producción para actualizar un expediente</description>
    <label>EndpointActulizarExp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>