force-app/main/default/objects/ArrProdDatosWS__c/fields/PrivateKey__c.field-meta.xml
<CustomField>
    <fullName>PrivateKey__c</fullName>
    <description>Clave privada generada por Producción de Arriaga</description>
    <label>PrivateKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>