force-app/main/default/objects/ArrProdDatosWS__c/fields/PublicKey__c.field-meta.xml
<CustomField>
    <fullName>PublicKey__c</fullName>
    <description>Clave publica utilizada para llegar al WS</description>
    <label>PublicKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>