force-app/main/default/objects/ArrProdDatosWS__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>PrivateKey__c</columns>
    <columns>PublicKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <language>es</language>
</ListView>